--- a/Login_deg/Login_deg/App.config
+++ b/Login_deg/Login_deg/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Login_deg.Properties.Settings.statementConnectionString"
+            connectionString="Data Source=JCONT-RD;Initial Catalog=statement;Persist Security Info=True;User ID=tes;Password=123"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
