--- a/Login_deg/Login_deg/Login_deg.csproj
+++ b/Login_deg/Login_deg/Login_deg.csproj
@@ -96,6 +96,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="statementDataSet.cs">
+      <DependentUpon>statementDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="statementDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>statementDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +132,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="statementDataSet.xsc">
+      <DependentUpon>statementDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="statementDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>statementDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="statementDataSet.xss">
+      <DependentUpon>statementDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
